--- a/.github/workflows/TEST-912.yml
+++ b/.github/workflows/TEST-912.yml
@@ -1,35 +1,29 @@
-        name: TEST-912
+name: TEST-912
 
-        on:
-          workflow_dispatch:
+on:
+  workflow_dispatch:
 
+jobs:
+  test:
+    runs-on: ubuntu-latest
 
-        jobs:
-          build:
-           name: GITHUB
-           runs-on: ubuntu-latest
-           steps:
-                - name: Check out the repo
-                  uses: actions/checkout@v3  
-            
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-        #---------------- DOCKER
-          DOCKERHUB:
-           needs: [build]
-           runs-on: ubuntu-latest
-           steps:
-             - name: Checkout code
-               uses: actions/checkout@v2
-             - name: Set up Docker Buildx
-               uses: docker/setup-buildx-action@v3
-             - name: Login to Docker Hub
-               uses: docker/login-action@v2
-               with:
-                 username: suriyakanth1
-                 password: dckr_pat_LSDYW7uqWPPYvQOrLJFEbl7oPjM
-             - name: Build and push
-               uses: docker/build-push-action@v5
-               with:
-                  push: true
-                  tags: suriyakanth1/dockerimagebuild:main
-            
+    - name: Set up JDK
+      uses: actions/setup-java@v2
+      with:
+        java-version: '11'
+
+    - name: Set up ChromeDriver
+      run: |
+        wget -N https://chromedriver.storage.googleapis.com/94.0.4606.61/chromedriver_linux64.zip
+        unzip chromedriver_linux64.zip
+        sudo mv chromedriver /usr/local/bin/chromedriver
+        sudo chmod +x /usr/local/bin/chromedriver
+
+    - name: Run Selenium test
+      run: |
+        javac -cp ".:libs/*" automationtest/Selenium.java
+        java -cp ".:libs/*" automationtest.Selenium
