--- a/.github/workflows/TEST-912.yml
+++ b/.github/workflows/TEST-912.yml
@@ -9,12 +9,13 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
 
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
         java-version: '11'
+        distribution: 'adopt'  # or 'temurin' depending on your preference
 
     - name: Set up ChromeDriver
       run: |
